k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: recrea-sys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # initContainer copia el código al volumen compartido con nginx
      containers:
        - name: php
          image: recrea-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: shared-code
              mountPath: /var/www/html/backend

        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: shared-code
              mountPath: /var/www/html/backend

      volumes:
        - name: shared-code
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
